# TextAdventure-CLISoulWorker

./: .clangd  .gitignore  Battle.c  Bitmap.c  CMakeLists.txt  DArray.c  Error.c  Keyboard.c  Makefile  Maze.c  Misc.c  README.md  RoomTable.c  RoomTable.h  SaveLoad.c  Setup.c  Setup.h  SoulWorker.c  SoulWorker.h  cmake.bat  cmake_release.bat  compile_flags.txt  getline.c  installer.c  itoa.s  launcher.c  main.c  map.json  mate.c  mate.h  schema-map.json  unistd.h  version
data/maps/: control-zone.json  control_zone.json  map.json  r-square.json  r_square.json  schema-map.json
data/misc/: skills_format
data/saves/: schema-user-save.json
data/saves/maps/: schema-map-save.json
data/story/control_zone/: boss.story  entry.story
data/story/r_square/: boss.story  entry.story
headers/: Battle.h  Bitmap.h  Colors.h  DArray.h  Error.h  Keyboard.h  LoadJSON.h  Maze.h  Misc.h  SaveLoad.h  Setup.h  SoulWorker.h  unistd.h
tools/: .gitignore  CreateEnemy.c  CreateItem.c  CreateMaze.c  CreateRoom.c  Makefile  createMap.c  process
tools/info/: cz-room0.info  cz-room1.info  cz-room2.info  cz-room3.info  room0.info  room1.info  room2.info  room3.info  room4.info  rs-room0.info  rs-room1.info  rs-room2.info  rs-room3.info
